--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --ext .js --ext .jsx ./src"
   },
   "dependencies": {
+    "babel-runtime-jsx-plus": "^0.1.0",
     "driver-universal": "^1.0.0",
     "history": "^4.9.0",
     "rax": "^1.0.0",
@@ -18,8 +19,11 @@
     "rax-use-router": "^2.0.0"
   },
   "devDependencies": {
-    "rax-scripts": "^1.3.3",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-transform-jsx-fragment": "^0.1.0",
+    "babel-plugin-transform-jsx-memo": "^0.1.0",
+    "babel-plugin-transform-jsx-slot": "^0.1.0",
     "eslint": "^5.15.1",
-    "babel-eslint": "^10.0.1"
+    "rax-scripts": "^1.3.3"
   }
 }
